# sequenceprofiler

./: Cargo.toml  README.md
samplefile/longread-sample-files/: kmeruniquefasta.txt  sequenceorigin.txt
samplefile/sequence-sample-files/: frequencies-threshold.txt  sample.fasta  sequence-threshold.fasta
src/: args.rs  jellyfish.rs  longread.rs  main.rs  sentence.rs  simfilter.rs  similarity.rs
