[package]
name = "sequenceprofiler"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "sequence similarity based on identity kmers and all sequence profiling under one rust crate"
homepage = "https://github.com/omicscode/sequenceprofiler"
repository = "https://github.com/omicscode/sequenceprofiler"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
derive = "1.0.0"
features = "0.10.0"
figlet-rs = "0.1.5"
tokio = { version = "1.47.1", features = ["full"] }
